# libpsam

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  DEMO_ADDITION_SUMMARY.md  Dockerfile.wasm  INSPECTOR.md  LICENSE  README.md  SETUP_SUMMARY.md  docker-compose.yml  test_aligned_composite.c  test_compose_v1_cli  test_compose_v1_cli.c
.github/workflows/: ci.yml  deploy-demo.yml  release.yml
bindings/javascript/: README.md  package-lock.json  package.json  tsconfig.cjs.json  tsconfig.json
bindings/javascript/src/: index.ts  native.ts  shims-ref-napi.d.ts  types.ts  wasm.ts
bindings/python/: README.md  pyproject.toml  setup.py
bindings/python/psam/: __init__.py  core.py
bindings/wasm/: README.md  build.sh
core/: CMakeLists.txt  README.md
core/include/: psam.h  psam_composite.h  psam_export.h  psam_vocab_alignment.h
core/src/: psam_internal.h
core/src/cli/: psam_cli.c
core/src/composition/: composite_layered.c  layers.c  vocab_alignment.c
core/src/core/: csr.c  generator.c  infer.c  inspect.c  model.c  train.c  training_hash.h
core/src/io/: composite.c  composite_v1.c  serialize.c  sha256.c
core/tests/: test_prediction  test_prediction.c  test_simple  test_simple.c
corpora/text/: CatSat.txt  Luna.txt  TheAnomaly.txt
demo/: .gitignore  DEPLOY.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
demo/public/wasm/: README.md
demo/scripts/: sync-wasm.cjs
demo/src/: App.tsx  PSAMInspector.tsx  PSAMWasmDemo.tsx  PSAMv3.tsx
demo/src/components/: PSAMRailwayViewer.tsx
demo/src/lib/: psam-inspector-wasm.ts
docs/: API.md  BUILDING.md  Composition.md  CorePhilosophy.md  FIM.md  GENERATOR.md  GITHUB_PAGES.md  MemoryLayers.md  PSAM.md  PSAMC_FORMAT.md  README.md  RESIDUAL_ACTIVATION_DESIGN.md  Roadmap.md  Sampler.md  psam.1
examples/: README.md
examples/c/: CMakeLists.txt  basic_usage.c  layer_composition.c
examples/javascript/: README.md  browser-example.html  node-example.js
examples/python/: README.md  basic_usage.py  debug_dog_no_residuals.py  debug_dog_question.py  debug_residuals.py  debug_stateful_gen.py  domain_adaptation.py  explain_dog.py  qa_debug.py  qa_explain.py  qa_offset_analysis.py  qa_residual_exploration.py  qa_solutions.py  qa_test.py  qa_with_residuals.py  test_residuals_full_qa.py  test_residuals_qa.py  test_salience_qa.py  test_stateful_generator.py  test_stateful_residuals.py
maps/: hamlet.l2u.u32  hamlet.u2l.pairs  macbeth.l2u.u32  macbeth.u2l.pairs
scripts/: build-all.sh  docker-build.sh  shakespeare_harness.py
testing/: ADVERSARIAL_COMPOSITION.md  DEGRADED_TEXT_RECONSTRUCTION.md  EXPECTED_OUTPUTS.md  QUICKSTART.md  README.md  run_composition_tests.py  synthetic_composition_test.py  verify_composition.py  visualize_sweep.py
testing/bun/: composition.test.ts
testing/python/: test_adversarial_composition.py  test_composition.py  test_degraded_reconstruction.py  test_prompt_injection_defense.py  test_sampling_modes.py  test_temperature_effect.py  test_temperature_ranking.py  test_wasm_demo_autogen.py
