[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libpsam"
version = "0.1.0"
description = "Fast, lightweight sequence prediction using learned token associations"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Foundation42"}
]
keywords = ["nlp", "sequence-prediction", "language-model", "psam"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/Foundation42/libpsam"
Repository = "https://github.com/Foundation42/libpsam"
Issues = "https://github.com/Foundation42/libpsam/issues"
